Added tab accesibility to nav links

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <nav id="nav">
                 <ul id="nav-links">
                     <li class="nav-button" id="home-button">
-                        <a>Home</a>
+                        <a href="#">Home</a>
                     </li>
                     <li class="nav-button" id="about-button">
-                        <a>About</a>
+                        <a href="#">About</a>
                     </li>
                     <li class="nav-button" id="projects-button">
-                        <a>Projects</a>
+                        <a href="#">Projects</a>
                     </li>
                     <li class="nav-button" id="tech-button">
-                        <a>Technologies</a>
+                        <a href="#">Technologies</a>
                     </li>
                     <li class="nav-button">
                         <a href="./images/Resume.pdf" download target="_blank">Resume</a>
                     </li>
                     <li class="nav-button" id="social-button">
-                        <a>Contact Me</a>
+                        <a href="#">Contact Me</a>
                     </li>
                 </ul>
                 <i class="fas fa-ellipsis-h fa-2x" id="hamburger"></i>
