Updated resume and email

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#">Technologies</a>
                     </li>
                     <li class="nav-button">
-                        <a href="./images/Resume.pdf" download target="_blank">Resume</a>
+                        <a href="./images/Nathan_Daniels_Resume.pdf" download target="_blank">Resume</a>
                     </li>
                     <li class="nav-button" id="social-button">
                         <a href="#">Contact Me</a>
@@ -143,7 +143,7 @@
             </section>
             <section id="social">
                 <div id="social-box">
-                    <a href ="mailto: nathandanielsbassoon@gmail.com" class="social-icon" id="email-icon"><i class="fas fa-envelope fa-5x"></i></a>
+                    <a href ="mailto: nathanpdaniels42@gmail.com" class="social-icon" id="email-icon"><i class="fas fa-envelope fa-5x"></i></a>
                     <a href="https://github.com/natedaniels42" target="_blank" class="social-icon" id="github-icon"><i class="fab fa-github fa-5x"></i></a>
                     <a href="https://www.linkedin.com/in/nathandaniels42/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in fa-5x"></i></a>
                 </div>
