Added alt text for images to make it more accessible

--- a/index.html
+++ b/index.html
@@ -108,35 +108,35 @@
                 <div id="tech-box">
                     <div class="logo-column">
                         <div class="logo">
-                            <img src="./images/HTML-logo.png" width="100px" height="100px">
+                            <img src="./images/HTML-logo.png" width="100px" height="100px" alt="HTML logo">
                         </div>
                         <div class="logo">
-                            <img src="./images/CSS-logo.png" width="100px" height="100px">
+                            <img src="./images/CSS-logo.png" width="100px" height="100px" alt="CSS logo">
                         </div>
                         <div class="logo">
-                            <img src="./images/JS-logo.png" width="100px" height="100px">
-                        </div>
-                    </div>
-                    <div class="logo-column">
-                        <div class="logo">
-                            <img src="./images/jquery-logo.png" width="100px" height="100px">
-                        </div>
-                        <div class="logo">
-                            <img src="./images/node-logo.png" width="100px" height="100px">
-                        </div>
-                        <div class="logo">
-                            <img src="./images/mongodb-logo.png" width="100px" height="100px">
+                            <img src="./images/JS-logo.png" width="100px" height="100px" alt="Javascript logo">
                         </div>
                     </div>
                     <div class="logo-column">
                         <div class="logo">
-                            <img src="./images/react-logo.png" width="100px" height="100px">
+                            <img src="./images/jquery-logo.png" width="100px" height="100px" alt="JQuery logo">
                         </div>
                         <div class="logo">
-                            <img src="./images/python-logo.png" width="100px" height="100px">
+                            <img src="./images/node-logo.png" width="100px" height="100px" alt="NodeJS logo">
                         </div>
                         <div class="logo">
-                            <img src="./images/postgres-logo.png" width="100px" height="100px">
+                            <img src="./images/mongodb-logo.png" width="100px" height="100px" alt="MongoDB logo">
+                        </div>
+                    </div>
+                    <div class="logo-column">
+                        <div class="logo">
+                            <img src="./images/react-logo.png" width="100px" height="100px" alt="ReactJS logo">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/python-logo.png" width="100px" height="100px" alt="Python logo">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/postgres-logo.png" width="100px" height="100px" alt="PostgreSQL logo">
                         </div>
                     </div>
                 </div>
