Added text to social links for better web accessibility

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
             </section>
             <section id="social">
                 <div id="social-box">
-                    <a href ="mailto: nathanpdaniels42@gmail.com" class="social-icon" id="email-icon"><i class="fas fa-envelope fa-5x"></i></a>
-                    <a href="https://github.com/natedaniels42" target="_blank" class="social-icon" id="github-icon"><i class="fab fa-github fa-5x"></i></a>
-                    <a href="https://www.linkedin.com/in/nathandaniels42/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in fa-5x"></i></a>
+                    <a href ="mailto: nathanpdaniels42@gmail.com" class="social-icon" id="email-icon"><i class="fas fa-envelope fa-5x"></i><span class="social-text">Email</span></a>
+                    <a href="https://github.com/natedaniels42" target="_blank" class="social-icon" id="github-icon"><i class="fab fa-github fa-5x"></i><span class="social-text">GitHub</span></a>
+                    <a href="https://www.linkedin.com/in/nathandaniels42/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in fa-5x"></i><span class="social-text">LinkedIn</span></a>
                 </div>
             </section>
         </main>
