Added movable do project and removed tamagotchi

--- a/index.html
+++ b/index.html
@@ -84,24 +84,20 @@
                 <div id="forward"><i class="fas fa-arrow-circle-right fa-3x"></i></div>
                 <div id="back"><i class="fas fa-arrow-circle-left fa-3x"></i></div>
                 <div class="project-card" id="card1">
+                    <a href="https://movable-do.herokuapp.com/" target="_blank"><img src="./images/solfege-circle.jpeg" alt="colorful food">
+                    <p class="project-description"><strong>Movable D&#333;</strong> Choose what note you want to set as your "d&#333;" and then choose your scale type (major, natural minor, harmonic minor, melodic minor) to set your solfege syllables, then click the buttons to hear the notes for each syllable.  Built using React</p></a>
+                </div>
+                <div class="project-card" id="card2">
                     <a href="https://macro-meals42.herokuapp.com/" target="_blank"><img src="./images/food.jpg" alt="colorful food">
                     <p class="project-description"><strong>Macro Meals</strong> allows the user to search for healthy food options using custom macronutrient filters.  Choose the amount of fat, carbs, and protein you need or just browse through all the meal options.  Built using React with an Express backend and MongoDB</p></a>
                 </div>
-                <div class="project-card" id="card2">
+                <div class="project-card" id="card3">
                     <a href="https://wayfarer-42.herokuapp.com/" target="_blank"><img src="./images/London1.jpeg" alt="London">
                     <p class="project-description"><strong>Wayfarer</strong> is a travel blog allowing the users to set up an account and share their thoughts on a variety of exciting destinations.  Built using Python and Django.  This was a collaboration of 3 developers</p></a>
                 </div>
-                <div class="project-card" id="card3">
+                <div class="project-card" id="card4">
                     <a href="https://protected-citadel-11690.herokuapp.com/" target="_blank"><img src="./images/petplaces.jpg" alt="Pets4U logo">
                     <p class="project-description"><strong>Pets4U</strong> is a site designed to inform users of pets available for adoption in their area.  Pets can be searched by location and new pets can be added to the site.  If you decide to adopt a pet, an email confirmation will be sent to you (note: nodemailer is disabled for the deployed site at this time).  This was a collaboration with another developer and it is built using Express and MongoDB</p></a>
-                </div>
-                <!--<div class="project-card" id="card4">
-                    <a href="/"><img src="./images/Rectangle-27.png" alt="Woman lifting weights">
-                    <p class="project-description"><strong>FitnessChain</strong> is a collaboration between a developer team and a UX/UI team.  While not a fully functioning app it is the realization of the design choices of the UX/UI team.  It is built using Express and MongoDB</p></a>
-                </div> -->
-                <div class="project-card" id="card4">
-                    <a href="https://tamagotchi42.herokuapp.com/home.html" target="_blank"><img src="./images/egg.jpg" alt="Colorful egg">
-                    <p class="project-description"><strong>Tamagotchi</strong> is a web version of the classic handheld pet game.  The goal is to keep your pet alive by feeding them, letting them sleep, and playing with them as needed.  Be careful not to overfeed them or overwork them or they will die.  This is a static website built using HTML, CSS, and Javascript, mostly utilizing JQuery. It also incorporates PHP to aid with deployment </p></a>
                 </div>
             </section>
             <section id="tech">
