--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="project-card" id="card2">
                     <a href="https://movable-do.herokuapp.com/" target="_blank"><img src="./images/solfege-circle.jpeg" alt="colorful food">
-                    <p class="project-description"><strong>Movable D&#333;</strong> Choose what note you want to set as your "d&#333;" and then choose your scale type (major, natural minor, harmonic minor, melodic minor) to set your solfege syllables, then click the buttons to hear the notes for each syllable.  Built using React</p></a>
+                    <p class="project-description"><strong>Movable D&#333;</strong> Choose which note you want to set as your "d&#333;" and then choose your scale type (major, natural minor, harmonic minor, melodic minor) to set your solfege syllables, then click the buttons to hear the notes for each syllable.  Built using React</p></a>
                 </div>
                 <div class="project-card" id="card3">
                     <a href="https://macro-meals42.herokuapp.com/" target="_blank"><img src="./images/food.jpg" alt="colorful food">
