Changed resume from download to open in new window

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#">Technologies</a>
                     </li>
                     <li class="nav-button">
-                        <a href="./images/Nathan_Daniels_Resume.pdf" download target="_blank">Resume</a>
+                        <a href="./images/Nathan_Daniels_Resume.pdf" target="_blank">Resume</a>
                     </li>
                     <li class="nav-button" id="social-button">
                         <a href="#">Contact Me</a>
