Added some small changes to tech box and star animation

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <div id="star18" class="star"></div>
             <div id="star19" class="star"></div>
             <div id="star20" class="star"></div>
+            <div id="star21" class="star"></div>
             <section id="banner">
                 <h1>Nathan Daniels</h1>
                 <h2>Software Engineer</h2>
@@ -85,7 +86,7 @@
                 <div id="back"><i class="fas fa-arrow-circle-left fa-3x"></i></div>
                 <div class="project-card" id="card1">
                     <a href="https://bassoon-finger-trainer-client.herokuapp.com/" target="_blank"><img src="./images/bassoon-img.jpeg" alt="colorful food">
-                    <p class="project-description"><strong>Key Masters</strong> is a bassoon fingering trainer for students.  Choose the difficulty or range you would like to do and then fill in the keys to submit your answers.  If you are stumped on the fingerings refer to the fingering chart for guidance.  Built with React with a Express backend and MongoDB</p></a>
+                    <p class="project-description"><strong>Key Masters</strong> is a bassoon fingering trainer for students.  Choose the difficulty or range you would like to do and then fill in the keys to submit your answers.  If you are stumped on the fingerings refer to the fingering chart for guidance.  Built with React with an Express backend and MongoDB</p></a>
                 </div>
                 <div class="project-card" id="card2">
                     <a href="https://movable-do.herokuapp.com/" target="_blank"><img src="./images/solfege-circle.jpeg" alt="colorful food">
@@ -108,38 +109,39 @@
                 <div id="tech-box">
                     <div class="logo-column">
                         <div class="logo">
-                            <img src="./images/HTML-logo.png" width="100px" height="100px" alt="HTML logo">
+                            <img src="./images/HTML-logo.png" id="HTML" width="100px" height="100px" alt="HTML logo">
                         </div>
                         <div class="logo">
-                            <img src="./images/CSS-logo.png" width="100px" height="100px" alt="CSS logo">
+                            <img src="./images/CSS-logo.png" id="CSS" width="100px" height="100px" alt="CSS logo">
                         </div>
                         <div class="logo">
-                            <img src="./images/JS-logo.png" width="100px" height="100px" alt="Javascript logo">
-                        </div>
-                    </div>
-                    <div class="logo-column">
-                        <div class="logo">
-                            <img src="./images/jquery-logo.png" width="100px" height="100px" alt="JQuery logo">
-                        </div>
-                        <div class="logo">
-                            <img src="./images/node-logo.png" width="100px" height="100px" alt="NodeJS logo">
-                        </div>
-                        <div class="logo">
-                            <img src="./images/mongodb-logo.png" width="100px" height="100px" alt="MongoDB logo">
+                            <img src="./images/JS-logo.png" id="JavaScript" width="100px" height="100px" alt="Javascript logo">
                         </div>
                     </div>
                     <div class="logo-column">
                         <div class="logo">
-                            <img src="./images/react-logo.png" width="100px" height="100px" alt="ReactJS logo">
+                            <img src="./images/jquery-logo.png" id="JQuery" width="100px" height="100px" alt="JQuery logo">
                         </div>
                         <div class="logo">
-                            <img src="./images/python-logo.png" width="100px" height="100px" alt="Python logo">
+                            <img src="./images/node-logo.png" id="Node" width="100px" height="100px" alt="NodeJS logo">
                         </div>
                         <div class="logo">
-                            <img src="./images/postgres-logo.png" width="100px" height="100px" alt="PostgreSQL logo">
+                            <img src="./images/mongodb-logo.png" id="MongoDB" width="100px" height="100px" alt="MongoDB logo">
+                        </div>
+                    </div>
+                    <div class="logo-column">
+                        <div class="logo">
+                            <img src="./images/react-logo.png" id="React" width="100px" height="100px" alt="ReactJS logo">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/python-logo.png" id="Python" width="100px" height="100px" alt="Python logo">
+                        </div>
+                        <div class="logo">
+                            <img src="./images/postgres-logo.png" id="PostgreSQL" width="100px" height="100px" alt="PostgreSQL logo">
                         </div>
                     </div>
                 </div>
+                <h2 id="hovered-tech"></h2>
             </section>
             <section id="social">
                 <div id="social-box">
