Resized the saple images in about page

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             </section>
             <section id="about">
                 <div id="sample-images">
-                    <img src="./images/nate-outdoors.jpg" id="sample-image1" width="75px" height="75px" alt="man with wife outdoors">
-                    <img src="./images/nate-bassoon.jpg" id="sample-image2" width="75px" height="75px" alt="man playing bassoon">
-                    <img src="./images/alfine-tongue.jpg" id="sample-image3" width="75px" height="75px" alt="dog with tongue out">
+                    <img src="./images/nate-outdoors.jpg" id="sample-image1" alt="man with wife outdoors">
+                    <img src="./images/nate-bassoon.jpg" id="sample-image2" alt="man playing bassoon">
+                    <img src="./images/alfine-tongue.jpg" id="sample-image3" alt="dog with tongue out">
                 </div>
                 <div id="about-inner">
                     <div id="background-box"></div>
